# view_ws

./: .gitignore  cloud_plane.pcd  tree.txt  view_ws.workspace
src/: .gitignore  Surface_Extraction.tar
src/Object-Tracking-Kinect-ROS-OpenCV-PCL--master/: CMakeLists.txt
src/build-Object-Tracking-Kinect-ROS-OpenCV-PCL--Desktop-Default/: CMakeCache.txt
src/chapter6_tutorials/: CMakeLists.txt
src/chapter6_tutorials/src/: pcl_create.cpp  pcl_downsampling.cpp  pcl_filter.cpp  pcl_matching.cpp  pcl_model_estimation.cpp  pcl_partitioning.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp  pcl_visualize.cpp  pcl_visualize2.cpp  pcl_write.cpp  readme.md
src/iai_kinect2/kinect2_bridge/data/002467263147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
src/iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch
src/iai_kinect2/kinect2_calibration/: CMakeLists.txt
src/iai_kinect2/kinect2_viewer/: CMakeLists.txt  README.md
src/iai_kinect2/kinect2_viewer/6DOF/: filter_cloud_6dof.cpp  seg_cylinder_6dof.cpp  viewer_6dof.cpp  viewer_6dof2.cpp
src/iai_kinect2/kinect2_viewer/data/readme/: cylinder_seg.md
src/iai_kinect2/kinect2_viewer/source/: ReadMe.md  _ReadMe.md  cloud_read.cpp  cylinder_seg.cpp  cylinder_segmentation.cpp  fealture_normalEstimation.cpp  kinect_view_Normal.cpp  kinect_viewer.cpp  normalEstimation.cpp  seg_cylinder.cpp  seg_cylinder_no_class.cpp  seg_euclidean_cluster.cpp  segmentation_cloud.cpp  viewer_process.cpp
src/iai_kinect2/kinect2_viewer/src/: image_converter.cpp  image_viewer.cpp  pcl_cloud_viewer.cpp  pcl_read.cpp  viewer.cpp
src/pcl_object_track/: CMakeLists.txt  package.xml
src/pcl_object_track/scripts/: ros_cv_wrapper.py
src/pcl_object_track/src/: Tracker_object.cpp  Tracker_object2.cpp  test_image.cpp
src/pcl_recognition/: CMakeLists.txt  ism_command.sh  tree.txt
src/pcl_recognition/include/pcl_recognition/: pcl_recognition.h
src/pcl_recognition/src/: correspondence_grouping.cpp  global_hypothesis_verification.cpp  object_recognizer.cpp  pcd_edit_tool.cpp
src/tabletop_operation/: CMakeLists.txt
src/tabletop_operation/src/: cluster_euclid.cpp  planar.cpp
